# SecureShare

./: .env.sample  .gitignore
BACKEND/: Cargo.toml
frontend/: package-lock.json
src/: config.rs
